# mpi-custom-datatype

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  main.c  paper.mplstyle  requirements.txt
benchmark-options/: bw-1mb-packed.yml  bw-1mb.yml  bw-256k.yml  bw-64k.yml  bw-struct-simple-packed.yml  bw-struct-simple-rsmpi.yml  bw-struct-simple.yml  bw-struct-vec-debug-32848.yml  bw-struct-vec-debug-65696.yml  bw-struct-vec-packed.yml  bw-struct-vec.yml  bw.yml  latency-1mb.yml  latency-256k.yml  latency-small.yml  latency-struct-simple-no-gap.yml  latency-struct-simple.yml  latency-struct-vec.yml  latency.yml
examples/: CMakeLists.txt  datatype0.c  datatype1.c  hello_world.c  mpicd.py  osu_bw.c  pingpong.py  probe.c  regions.c  ring.c
examples/ddtbench/: Makefile  Makefile.inc
examples/ddtbench/analysis_scripts/: ddtbench.ipynb
examples/ddtbench/src_c/: ddtbench.c  timing.c
examples/ddtbench/src_c_custom/: Makefile  ddtbench.c  ddtbench.h  generator.h  mpi.h  timing.c  timing_basic.c  timing_lammps_custom.cc  timing_milc_custom.cc  timing_nas_custom.cc  timing_wrf_custom.cc  wrapper.c
mpicd/: Cargo.toml
mpicd-benchmarks/: Cargo.toml
mpicd-benchmarks/src/: lib.rs
mpicd-capi/: Cargo.toml
mpicd-capi/include/: mpi.h
mpicd-capi/src/: c.rs  ccontext.rs  consts.rs  datatype.rs  lib.rs  p2p.rs
mpicd-pmix-sys/: Cargo.toml  build.rs
mpicd-rust-benchmarks/: Cargo.toml
mpicd-rust-benchmarks/src/: buffer.rs  bw.rs  datatype.rs  generate.rs  latency.rs  lib.rs  random.rs
mpicd-ucx-sys/: Cargo.toml
mpicd-ucx-sys/src/: ucx.c  ucx.h
mpicd/src/: callbacks.rs  communicator.rs  context.rs  datatype.rs  lib.rs  main.rs  message.rs  pmi.rs  request.rs  util.rs
results/2024-05-15/: mpicd-custom-bw-256k.out  mpicd-packed-bw-256k.out
results/2024-05-15-bw/: rsmpi-256k.out
results/2024-05-15-bw-2-node-256k/: custom.out  packed.out  rsmpi.out
results/2024-05-15-bw-2-node-multi-run/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  iovec-0.out  iovec-1.out  iovec-2.out  iovec-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/2024-05-15-latency/: custom-256k.out  packed-256k.out
results/2024-05-15-latency-256k/: rsmpi.out
results/2024-05-16-latency-2-node/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  iovec-0.out  iovec-1.out  iovec-2.out  iovec-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/2024-05-16-latency-single-vec/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  iovec-0.out  iovec-1.out  iovec-2.out  iovec-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/2024-05-16-latency-single-vec-2/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  iovec-0.out  iovec-1.out  iovec-2.out  iovec-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/bw-1mb-s128/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/bw_double-vec_1024s/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/bw_double-vec_1024s_aarch64/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/bw_double-vec_128s/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-3.out
results/bw_struct-simple/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-1.out  rsmpi-2.out  rsmpi-struct-simple-0.out  rsmpi-struct-simple-1.out  rsmpi-struct-simple-2.out  rsmpi-struct-simple-3.out
results/bw_struct-vec/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  packed-2.out  packed-3.out  rsmpi-0.out  rsmpi-1.out  rsmpi-2.out  rsmpi-struct-vec-0.out  rsmpi-struct-vec-1.out  rsmpi-struct-vec-2.out  rsmpi-struct-vec-3.out
results/bw_struct-vec_aarch64/: custom-0.out  custom-1.out  custom-2.out  custom-3.out  packed-0.out  packed-1.out  (+6 more)
scripts/: bw_double-vec_1024s.sh  bw_struct-simple.sh  bw_struct-vec.sh  graph.py  graph_pingpong.py  latency_double-vec_varying.sh  latency_struct-simple-no-gap.sh  latency_struct-simple.sh  latency_struct-vec.sh  mpicc.in  pingpong-1-numpy.sh  pingpong-1.sh  pingpong-2-complex-object-128kib.sh  pingpong-2-complex-object-16mib.sh  pingpong-2-complex-object-1mib.sh  pingpong-2-complex-object-256kib.sh  pingpong-2-complex-object-2mib.sh  pingpong-2-complex-object-512kib.sh  pingpong-2-complex-object-64kib.sh  pingpong-2-complex-object-8mib.sh  pingpong-2-complex-object.sh  pingpong-2.sh  profile.py  profile.sh  profile_runner.sh  run_rust_benchmarks.py  run_rust_bw_benchmarks.py
(+271 files in other folders)
