add_executable(hello_world hello_world.c)
add_executable(datatype0 datatype0.c)
add_executable(datatype1 datatype1.c)
add_executable(ring ring.c)
add_executable(regions regions.c)
add_executable(osu_bw osu_bw.c)
add_executable(probe probe.c)

foreach(BIN hello_world datatype0 datatype1 ring regions osu_bw probe)
    target_link_libraries(${BIN} PUBLIC mpicd-capi)
endforeach()
